[gd_scene load_steps=18 format=3 uid="uid://csmeaxa4g6wmb"]

[ext_resource type="Script" path="res://assets/scripts/scripts_actividades/dibujar.gd" id="1_ds8yn"]
[ext_resource type="Texture2D" uid="uid://4hx61tjemxyd" path="res://img/sprites/marco.png" id="2_nhu46"]
[ext_resource type="Texture2D" uid="uid://wrq1s28qwau" path="res://img/sprites/borrador.png" id="3_y1u5r"]
[ext_resource type="Texture2D" uid="uid://dmo77wtlahxku" path="res://img/sprites/placeholder_abajo.png" id="4_io414"]
[ext_resource type="Theme" uid="uid://bm1ub45g4i7os" path="res://themes/ai_theme.tres" id="4_sd87m"]
[ext_resource type="Texture2D" uid="uid://on5p778c7ep3" path="res://img/nucleo_5/botones/help.png" id="5_fhngj"]
[ext_resource type="Shader" path="res://assets/shaders/transparencia.gdshader" id="5_iuy0o"]
[ext_resource type="Texture2D" uid="uid://b75qlnk12j3eb" path="res://img/sprites/placeholder_arriba.jpg" id="6_hhqj5"]
[ext_resource type="Script" path="res://assets/scripts/scripts_actividades/zonas_dibujar.gd" id="8_i6245"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="9_a7tif"]
[ext_resource type="Texture2D" uid="uid://g0uirbmqwoqb" path="res://img/nucleo_5/botones/informacion.png" id="11_7acla"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lnjbd"]
radius = 28.0713

[sub_resource type="Gradient" id="Gradient_24rcq"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8ks38"]
gradient = SubResource("Gradient_24rcq")

[sub_resource type="ViewportTexture" id="ViewportTexture_ac3nf"]
viewport_path = NodePath("Pantalla/SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7jvyl"]
resource_local_to_scene = true
shader = ExtResource("5_iuy0o")
shader_parameter/mask_texture = SubResource("ViewportTexture_ac3nf")

[sub_resource type="CircleShape2D" id="CircleShape2D_2kofn"]
radius = 41.0122

[node name="Dibujar" type="Node2D"]
script = ExtResource("1_ds8yn")
color = Color(0.560521, 0.000228236, 0.5607, 1)
imagen_arriba = ExtResource("6_hhqj5")
imagen_abajo = ExtResource("4_io414")

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 0.239216, 0, 1)
offset_left = 139.0
offset_top = 25.0
offset_right = 284.0
offset_bottom = 106.0
theme = ExtResource("4_sd87m")
text = "Prompt:"
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 278.0
offset_top = 24.0
offset_right = 1610.0
offset_bottom = 105.0
theme = ExtResource("4_sd87m")
text = "PLACEHOLDER"
vertical_alignment = 1

[node name="Help" type="Area2D" parent="."]
position = Vector2(108, 66)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Help"]
shape = SubResource("CircleShape2D_lnjbd")

[node name="Sprite2D" type="Sprite2D" parent="Help"]
texture = ExtResource("5_fhngj")

[node name="Marco" type="Sprite2D" parent="."]
position = Vector2(964, 553)
texture = ExtResource("2_nhu46")

[node name="Pantalla" type="Node2D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Pantalla"]
offset_left = 141.0
offset_top = 162.0
offset_right = 1785.0
offset_bottom = 980.0

[node name="SubViewport" type="SubViewport" parent="Pantalla/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1644, 818)
render_target_update_mode = 4

[node name="Capa" type="TextureRect" parent="Pantalla/SubViewportContainer/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_8ks38")

[node name="Borrador" type="Sprite2D" parent="Pantalla/SubViewportContainer/SubViewport"]
texture = ExtResource("3_y1u5r")

[node name="ImagenAbajo" type="TextureRect" parent="Pantalla"]
offset_left = 141.0
offset_top = 162.0
offset_right = 1785.0
offset_bottom = 980.0
texture = ExtResource("4_io414")
expand_mode = 1

[node name="ImagenArriba" type="TextureRect" parent="Pantalla"]
material = SubResource("ShaderMaterial_7jvyl")
offset_left = 141.0
offset_top = 162.0
offset_right = 1785.0
offset_bottom = 980.0
texture = ExtResource("6_hhqj5")
expand_mode = 1

[node name="AreasInteraccion" type="Node2D" parent="."]

[node name="Zona0" type="Area2D" parent="AreasInteraccion"]
position = Vector2(73, 380)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona0"]
position = Vector2(668, 0)
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona1" type="Area2D" parent="AreasInteraccion"]
position = Vector2(948, 393)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona1"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona2" type="Area2D" parent="AreasInteraccion"]
position = Vector2(1125, 393)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona2"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona3" type="Area2D" parent="AreasInteraccion"]
position = Vector2(740, 552)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona3"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona4" type="Area2D" parent="AreasInteraccion"]
position = Vector2(948, 556)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona4"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona5" type="Area2D" parent="AreasInteraccion"]
position = Vector2(1127, 550)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona5"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona6" type="Area2D" parent="AreasInteraccion"]
position = Vector2(740, 733)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona6"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona7" type="Area2D" parent="AreasInteraccion"]
position = Vector2(948, 735)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona7"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Zona8" type="Area2D" parent="AreasInteraccion"]
position = Vector2(1130, 727)
script = ExtResource("8_i6245")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreasInteraccion/Zona8"]
shape = SubResource("CircleShape2D_2kofn")

[node name="Node2D" type="Node2D" parent="AreasInteraccion"]

[node name="BotonS" parent="." instance=ExtResource("9_a7tif")]
visible = false
modulate = Color(1, 0.239216, 0, 1)
offset_left = 1577.0
offset_top = 888.0
offset_right = 1705.0
offset_bottom = 933.0
texto = "ENVIAR"

[node name="Informacion" type="Sprite2D" parent="."]
visible = false
position = Vector2(438, 368)
texture = ExtResource("11_7acla")
centered = false

[connection signal="mouse_entered" from="Help" to="." method="_on_help_mouse_entered"]
[connection signal="mouse_exited" from="Help" to="." method="_on_help_mouse_exited"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona0" to="AreasInteraccion/Zona0" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona0" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona1" to="AreasInteraccion/Zona1" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona1" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona2" to="AreasInteraccion/Zona2" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona2" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona3" to="AreasInteraccion/Zona3" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona3" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona4" to="AreasInteraccion/Zona4" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona4" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona5" to="AreasInteraccion/Zona5" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona5" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona6" to="AreasInteraccion/Zona6" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona6" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona7" to="AreasInteraccion/Zona7" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona7" to="." method="_zona_cumplida"]
[connection signal="mouse_entered" from="AreasInteraccion/Zona8" to="AreasInteraccion/Zona8" method="_on_mouse_entered"]
[connection signal="zona_cumplida" from="AreasInteraccion/Zona8" to="." method="_zona_cumplida"]
[connection signal="pressed" from="BotonS" to="." method="_on_boton_s_pressed"]
